Fixed dataset and generated ARFF

--- a/Team_Success_Dataset.ipynb
+++ b/Team_Success_Dataset.ipynb
@@ -3665,7 +3665,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_14424\\1173872428.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_3588\\1173872428.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -4548,13 +4548,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_14424\\611825272.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_3588\\611825272.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  team_season_df_league_n[\"offensive\"] =  - team_season_df_league_n[\"o_pf\"]   + \\\n",
-      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_14424\\611825272.py:17: SettingWithCopyWarning: \n",
+      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_3588\\611825272.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4607,13 +4607,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_14424\\3943748517.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_3588\\3943748517.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  team_season_df_league_n[\"ratio_offensive\"] = team_season_df_league_n[\"offensive\"] / (team_season_df_league_n[\"offensive\"] + team_season_df_league_n[\"defensive\"])\n",
-      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_14424\\3943748517.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\G5\\AppData\\Local\\Temp\\ipykernel_3588\\3943748517.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -5530,7 +5530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "3487b62b",
    "metadata": {},
    "outputs": [
@@ -5729,7 +5729,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5828,7 +5828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "da21c9b4",
    "metadata": {},
    "outputs": [],
@@ -5838,7 +5838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "id": "fcb065ea",
    "metadata": {},
    "outputs": [
@@ -5863,16 +5863,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>team_a</th>\n",
-       "      <th>pace</th>\n",
-       "      <th>won</th>\n",
-       "      <th>lost</th>\n",
-       "      <th>cumulative_score</th>\n",
-       "      <th>team_b</th>\n",
-       "      <th>pace</th>\n",
-       "      <th>won</th>\n",
-       "      <th>lost</th>\n",
-       "      <th>cumulative_score</th>\n",
+       "      <th>teama</th>\n",
+       "      <th>pacea</th>\n",
+       "      <th>wona</th>\n",
+       "      <th>losta</th>\n",
+       "      <th>cumulativescorea</th>\n",
+       "      <th>teamb</th>\n",
+       "      <th>paceb</th>\n",
+       "      <th>wonb</th>\n",
+       "      <th>lostb</th>\n",
+       "      <th>cumulativescoreb</th>\n",
        "      <th>winner</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -6037,36 +6037,36 @@
        "</div>"
       ],
       "text/plain": [
-       "    team_a       pace  won  lost  cumulative_score team_b       pace  won  \\\n",
-       "0      ATL  93.948730   13    69             63680    BOS  95.735855   45   \n",
-       "1      ATL  93.948730   13    69             63680    CHI  96.283737   47   \n",
-       "2      ATL  93.948730   13    69             63680    CHR  96.201630   18   \n",
-       "3      ATL  93.948730   13    69             63680    CLE  93.840187   42   \n",
-       "4      ATL  93.948730   13    69             63680    DAL  95.204948   58   \n",
-       "..     ...        ...  ...   ...               ...    ...        ...  ...   \n",
-       "865    WAS  96.008492   45    37             66161    SAC  96.841805   50   \n",
-       "866    WAS  96.008492   45    37             66161    SAS  91.455696   59   \n",
-       "867    WAS  96.008492   45    37             66161    SEA  91.244949   52   \n",
-       "868    WAS  96.008492   45    37             66161    TOR  95.012611   33   \n",
-       "869    WAS  96.008492   45    37             66161    UTA  91.195145   26   \n",
+       "    teama      pacea  wona  losta  cumulativescorea teamb      paceb  wonb  \\\n",
+       "0     ATL  93.948730    13     69             63680   BOS  95.735855    45   \n",
+       "1     ATL  93.948730    13     69             63680   CHI  96.283737    47   \n",
+       "2     ATL  93.948730    13     69             63680   CHR  96.201630    18   \n",
+       "3     ATL  93.948730    13     69             63680   CLE  93.840187    42   \n",
+       "4     ATL  93.948730    13     69             63680   DAL  95.204948    58   \n",
+       "..    ...        ...   ...    ...               ...   ...        ...   ...   \n",
+       "865   WAS  96.008492    45     37             66161   SAC  96.841805    50   \n",
+       "866   WAS  96.008492    45     37             66161   SAS  91.455696    59   \n",
+       "867   WAS  96.008492    45     37             66161   SEA  91.244949    52   \n",
+       "868   WAS  96.008492    45     37             66161   TOR  95.012611    33   \n",
+       "869   WAS  96.008492    45     37             66161   UTA  91.195145    26   \n",
        "\n",
-       "     lost  cumulative_score  winner  \n",
-       "0      37             65720       0  \n",
-       "1      35             63778       0  \n",
-       "2      64             64207       0  \n",
-       "3      40             62969       0  \n",
-       "4      24             65387       0  \n",
-       "..    ...               ...     ...  \n",
-       "865    32             66721       0  \n",
-       "866    23             61433       1  \n",
-       "867    30             62773       1  \n",
-       "868    49             65318       1  \n",
-       "869    56             61361       1  \n",
+       "     lostb  cumulativescoreb  winner  \n",
+       "0       37             65720       0  \n",
+       "1       35             63778       0  \n",
+       "2       64             64207       0  \n",
+       "3       40             62969       0  \n",
+       "4       24             65387       0  \n",
+       "..     ...               ...     ...  \n",
+       "865     32             66721       0  \n",
+       "866     23             61433       1  \n",
+       "867     30             62773       1  \n",
+       "868     49             65318       1  \n",
+       "869     56             61361       1  \n",
        "\n",
        "[870 rows x 11 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6120,8 +6120,8 @@
     "\n",
     "        new_df.append(temp)\n",
     "  \n",
-    "\n",
-    "new_df = pd.DataFrame(new_df, columns=(\"team_a\", \"pace\", \"won\", \"lost\", \"cumulative_score\", \"team_b\", \"pace\", \"won\", \"lost\", \"cumulative_score\", \"winner\"))\n",
+    "# underscores not allowed, ensure unique labels\n",
+    "new_df = pd.DataFrame(new_df, columns=(\"teama\", \"pacea\", \"wona\", \"losta\", \"cumulativescorea\", \"teamb\", \"paceb\", \"wonb\", \"lostb\", \"cumulativescoreb\", \"winner\"))\n",
     "\n",
     "new_df"
    ]
@@ -6136,7 +6136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "id": "be7d2a9f",
    "metadata": {},
    "outputs": [],
