--- a/Team_Success_Dataset.ipynb
+++ b/Team_Success_Dataset.ipynb
@@ -6154,6 +6154,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9dd3acd2",
+   "metadata": {},
+   "source": [
+    "Once generated, the CSV file is converted into an ARFF file using Weka, and both the CSV file and ARFF file are moved into a folder called Final Datasets\n",
+    "\n",
+    "The authors also manipulated the ARFF file to ensure the class type was nominal, instead of ordinal, for Weka classifications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2f44e6e7",
    "metadata": {},
    "source": [
