--- a/Outstanding_Players_Dataset.ipynb
+++ b/Outstanding_Players_Dataset.ipynb
@@ -86,7 +86,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: arff in c:\\users\\sumei\\anaconda3\\envs\\comp721_assign\\lib\\site-packages (0.9)\n"
+      "Requirement already satisfied: arff in c:\\users\\g5\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (0.9)\n",
+      "\n",
+      "[notice] A new release of pip available: 22.1.2 -> 22.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -1054,7 +1057,7 @@
    "id": "c234cd38",
    "metadata": {},
    "source": [
-    "We decided to keep the N league as it is a league who played in 200."
+    "We decided to keep the N league as it is a league who played in 2004."
    ]
   },
   {
@@ -3397,7 +3400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -3411,7 +3414,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "26f960100e57e897baa557c3cbd87277b05a1478eab376cd302befd9f805ddf5"
+   }
   }
  },
  "nbformat": 4,
